# PyStrategist

./: .gitignore  GPU_Programming.ipynb  README.md  examples_pdblp_and_ta  examples_pdblp_and_ta.py  pandas.ipynb
PyRust-data-analysis/: 1-iris-data-analysis-rust.ipynb  Cargo.toml  evcxr-jupyter-integration.ipynb
PyRust-data-analysis/.ipynb_checkpoints/: 1-iris-data-analysis-rust-checkpoint.ipynb
PyRust-data-analysis/src/: main.rs
Strategy - Equity - Mean Reversion - EWA EWC/.ipynb_checkpoints/: Equity - Mean Reversion - EWA EWC (CADF Johansen)-checkpoint.ipynb  Mean Reversion ADF Johansen (EWA, EWC)-checkpoint.ipynb  Strategy - MR EWA EWC-checkpoint.py  example_2_1-checkpoint.py  functions2-checkpoint.py
Strategy - Equity - Mean Reversion - EWA EWC/Functions/: functions.py
