[package]
name = "PyRust-data-analysis"
version = "0.1.0"
edition = "2021"
description = "Rust for data analysis."


[dependencies]
blas-src = "0.9.0"
chrono = "0.4.31"
either = "1.9.0"
evcxr = "0.17.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
plotters = "0.3.6"
polars = "0.41.3"
smartcore = "0.3.2"
statrs = "0.16.0"
